src/objects/loan__Transaction_Summary__c.object
<CustomObject>
    <fields>
        <fullName>loan__Additional_Interest_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Interest Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Billing_Method__c</fullName>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Declining Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Repayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Due_Date__c</fullName>
        <description>Due Date of transaction, this is useful for billing transactions</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Excess__c</fullName>
        <label>Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Name__c</fullName>
        <label>Fee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
        <label>Frequency of Loan Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Only_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest__c</fullName>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Transaction Summary</relationshipLabel>
        <relationshipName>Transaction_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Snapshot__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Loan Snapshot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Account_Number__c</fullName>
        <description>One time ACH account number</description>
        <inlineHelpText>One time ACH account number</inlineHelpText>
        <label>ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Account_Type__c</fullName>
        <description>One time ACH Account type: Saving or checking</description>
        <label>ACH Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Bank_Name__c</fullName>
        <description>One time ACH Bank Name</description>
        <inlineHelpText>One time ACH Drawer Zip</inlineHelpText>
        <label>ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Debit_Date__c</fullName>
        <label>ACH Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Address1__c</fullName>
        <description>One time ACH Drawer Address Line 1</description>
        <inlineHelpText>One time ACH Drawer Address Line 1</inlineHelpText>
        <label>ACH Drawer Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Address2__c</fullName>
        <description>One time ACH Drawer Address Line 2</description>
        <inlineHelpText>One time ACH Drawer Address Line 2</inlineHelpText>
        <label>ACH Drawer Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_City__c</fullName>
        <description>One time ACH Drawer City</description>
        <inlineHelpText>One time ACH Drawer City</inlineHelpText>
        <label>ACH Drawer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Name__c</fullName>
        <description>One time ACH Drawer Name</description>
        <inlineHelpText>One time ACH Drawer Name</inlineHelpText>
        <label>ACH Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_State__c</fullName>
        <description>One time ACH Drawer State</description>
        <inlineHelpText>One time ACH Drawer State</inlineHelpText>
        <label>ACH Drawer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Drawer_Zip__c</fullName>
        <description>One time ACH Drawer Zip</description>
        <inlineHelpText>One time ACH Drawer Zip</inlineHelpText>
        <label>ACH Drawer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>One time ACH fee amount</description>
        <inlineHelpText>One time ACH fee amount</inlineHelpText>
        <label>ACH Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>One time ACH payment amount</description>
        <inlineHelpText>One time ACH payment amount</inlineHelpText>
        <label>ACH Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Relationship_Type__c</fullName>
        <description>One time ACH relationship type</description>
        <label>ACH Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2 Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__OT_ACH_Routing_Number__c</fullName>
        <description>One time ACH Routing number</description>
        <inlineHelpText>One time ACH Routing number</inlineHelpText>
        <label>ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Passed_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No of installments passed</description>
        <label>Passed Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Pay_Off_Date__c</fullName>
        <description>Date for the pay off quote</description>
        <label>Pay Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Remaining__c</fullName>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal__c</fullName>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Extension_Days__c</fullName>
        <description>Days by which repayments are extended</description>
        <inlineHelpText>Days by which repayments are extended</inlineHelpText>
        <label>Number of Payment Deferrals</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Repayment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Same_monthly_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same monthly payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Total_Fees_Due__c</fullName>
        <label>Total Fees Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Interest_Due__c</fullName>
        <label>Total Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Reversal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Reversal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PrincipalAdjustment-Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time ACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Txn_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Txn_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Txn Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Transaction Summary</label>
    <nameField>
        <displayFormat>TSID-{0000000000}</displayFormat>
        <label>Transaction Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>